fetch and store data

--- a/server/.env.example
+++ b/server/.env.example
@@ -7,3 +7,7 @@ MYSQL_DB=rollout_task
 MYSQL_DB_TEST=store_test
 MYSQL_USER=root
 MYSQL_PASSWORD=Mysql@r00t
+
+FLICKER_KEY=
+FLICKER_API_KEY=
+FLICKER_SECERT=
