--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,11 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "flickr-sdk": "^7.0.0-beta.7",
     "mysql2": "^3.9.8"
   }
 }
