--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "yarn run build && node dist/index.js"
+    "start": "yarn run build && node dist/index.js",
+    "test": "jest",
+    "watch:test": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -14,14 +16,18 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
+    "@types/node-cron": "^3.0.11",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.1",
     "prettier": "^3.2.5",
+    "ts-jest": "^29.1.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
@@ -31,6 +37,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "flickr-sdk": "^7.0.0-beta.7",
-    "mysql2": "^3.9.8"
+    "mysql2": "^3.9.8",
+    "node-cron": "^3.0.3"
   }
 }
