--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "iconv-lite": "^0.6.3",
     "jest": "^29.7.0",
     "nodemon": "^3.1.1",
     "prettier": "^3.2.5",
